<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_margin="@dimen/big_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_order_rece_attach_bg"
        android:orientation="horizontal"
        android:visibility="gone"
        android:padding="@dimen/big_margin">

        <TextView
            android:id="@+id/upload_doc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:drawableLeft="@drawable/attach_button"
            android:drawablePadding="@dimen/big_margin"
            android:gravity="center|start"
            android:text="@string/hint_driver_licence" />

        <ImageView
            android:id="@+id/upload_image_status"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/uploaded" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/signaturehelptext"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.app.OddfoodyDriver.DriverCustomView.InkView
        android:id="@+id/ink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:inkFlags="interpolation|responsiveWeight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:orientation="horizontal">

        <!--android:layout_marginStart="@dimen/order_img_size"-->

        <Button
            android:id="@+id/_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:layout_weight="1"
            android:background="@drawable/cancel_button"
            android:text="@string/cancel_btn_txt"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:layout_weight="1"
            android:background="@drawable/sign_in_button"
            android:text="@string/ok_btn_txt"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>



