<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/select_language"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/select_lang_zh_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/select_lang_btn_selector"
                android:button="@null"
                android:gravity="center"
                android:minHeight="50dp"
                android:text="@string/btn_zh"
                android:textColor="@drawable/select_lang_btn_textcolor_selector"/>

            <View
                android:layout_width="102dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <RadioButton
                android:id="@+id/select_lang_english_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/select_lang_btn_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:minHeight="50dp"
                android:text="@string/btn_english"
                android:textColor="@drawable/select_lang_btn_textcolor_selector"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/darker_gray"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fab_margin"
            android:elevation="@dimen/elevation"
            android:src="@drawable/ic_action_navigation_arrow_forward"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"/>
    </LinearLayout>
</RelativeLayout>