<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/report_app_bar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/pick_date_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/cancel_button"
            android:drawableEnd="@drawable/date"
            android:gravity="center|start"
            android:padding="@dimen/medium_margin"
            android:text="@string/pick_date"
            android:textAllCaps="false" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/pie_chart_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <com.app.OddfoodyDriver.androidcharts.view.PieChart
            android:id="@+id/piechart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                
                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="@dimen/medium_margin"
                    android:background="@color/assigned"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:text="@string/piechart_title3"
                    android:textColor="@color/disable_txt_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/small_margin">

                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="@dimen/medium_margin"
                    android:background="@color/delivery"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:text="@string/piechart_title1"
                    android:textColor="@color/disable_txt_color" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/chart_empty_msg_txt_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_recor_available_txt"
            android:textColor="@color/disable_txt_color" />

    </FrameLayout>


</LinearLayout>