<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:orientation="vertical">

    <include
        android:id="@+id/change_password_toolbar"
        layout="@layout/app_bar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layoutDirection="rtl"
        android:scrollbars="none">

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/chang_old_pass_txt_in_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textColor="@android:color/white"
                    app:errorTextAppearance="@style/error_appearance"
                    app:passwordToggleEnabled="false">

                    <EditText
                        android:id="@+id/chang_old_pass_edt_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/old_password_txt"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:gravity="left"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/chang_new_pass_txt_in_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:textColor="@android:color/white"
                    app:errorTextAppearance="@style/error_appearance"
                    app:passwordToggleEnabled="false">

                    <EditText
                        android:id="@+id/chang_new_pass_edt_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password_txt"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:gravity="left"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/chang_confirm_pass_txt_in_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:textColor="@android:color/white"
                    app:errorTextAppearance="@style/error_appearance"
                    app:passwordToggleEnabled="false">

                    <EditText
                        android:id="@+id/chang_confirm_pass_edt_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password_txt"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:gravity="left"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/change_pass_update_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/medium_margin"
                        android:layout_weight="1"
                        android:background="@drawable/sign_in_button"
                        android:text="@string/submit_button"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/change_pass_cancel_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/medium_margin"
                        android:layout_weight="1"
                        android:background="@drawable/cancel_button"
                        android:text="@string/cancel_btn_txt"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    </ScrollView>

</LinearLayout>